--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.codgen</groupId>
+    <groupId>io.github.codgen</groupId>
     <artifactId>codgen</artifactId>
-    <version>1.1.2</version>
+    <version>1.1.3</version>
     <packaging>pom</packaging>
+    <description>code generator parent pom，代码生成器父pom</description>
 
     <modules>
         <module>codgen-core</module>
@@ -20,13 +21,13 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <wheel.version>3.0.14</wheel.version>
+        <wheel.version>3.0.15</wheel.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.github.codgen</groupId>
+                <groupId>io.github.codgen</groupId>
                 <artifactId>codgen-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -41,4 +42,94 @@
         </dependencies>
     </dependencyManagement>
 
+    <url>https://github.com/codgen/codgen</url>
+    <developers>
+        <developer>
+            <name>zhangbaizi</name>
+            <email>nnzbz@163.com</email>
+        </developer>
+    </developers>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+    <scm>
+        <connection>scm:git:https://github.com/codgen/codgen.git</connection>
+        <developerConnection>scm:git:https://github.com/codgen/codgen.git</developerConnection>
+        <url>https://github.com/codgen/codgen.git</url>
+    </scm>
+
+    <profiles>
+        <profile>
+            <!-- 部署到中央仓库 -->
+            <id>deploy-public</id>
+            <build>
+                <plugins>
+                    <!-- Sonatype中央仓库发布插件 -->
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>0.4.0</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <publishingServerId>oss-new</publishingServerId>
+                            <tokenAuth>true</tokenAuth>
+                        </configuration>
+                    </plugin>
+
+                    <!-- 创建源码包 -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.3.0</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- 创建文档包 -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.6.3</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- 部署时用GPG数字签名 -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>3.1.0</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- 指定密钥的名称(可能会有多个生成的密钥) -->
+                                    <keyname>${gpg.keyname}</keyname>
+                                    <!-- 如果gpg服务有密钥，在settings.xml文件中配置 -->
+                                    <passphraseServerId>gpg</passphraseServerId>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
