--- a/codgen-cmd/pom.xml
+++ b/codgen-cmd/pom.xml
@@ -4,15 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>codgen</artifactId>
-        <groupId>com.github.codgen</groupId>
-        <version>1.1.2</version>
+        <groupId>io.github.codgen</groupId>
+        <version>1.1.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>codgen-cmd</artifactId>
+    <description>codgen cmd line，代码生成器命令行工具</description>
 
     <properties>
-        <mainClass>com.github.codgen.CodgenApplication</mainClass>
+        <mainClass>io.github.codgen.CodgenApplication</mainClass>
 
         <native-image-maven-plugin.version>21.2.0</native-image-maven-plugin.version>
         <native-maven-plugin.version>0.10.1</native-maven-plugin.version>
@@ -22,7 +23,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.codgen</groupId>
+            <groupId>io.github.codgen</groupId>
             <artifactId>codgen-core</artifactId>
         </dependency>
         <dependency>
@@ -127,6 +128,39 @@
         </resources>
 
         <plugins>
+            <!-- 将所有依赖打包(可执行的Jar包) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <transformers>
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <mainClass>io.github.codgen.CodgenApplication</mainClass>
+                        </transformer>
+                    </transformers>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- 用北京时间格式化build的时间，并放在build.time变量中以供读取 -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
