--- a/codgen-cmd/src/test/resources/in/codgen.yml
+++ b/codgen-cmd/src/test/resources/in/codgen.yml
@@ -58,7 +58,7 @@ template:
         outFilePath: ${project}-api/src/main/java/${modulePath}/${moduleClassName}.java
       - moduleName: api.impl  # 模块名(根据moduleName自动计算modulePackageName为packageName+'.'+moduleName，然后计算出modulePath)
         inFilePath: btl/api-impl.btl
-        outFilePath: ${project}-api/src/main/java/${modulePath}/${moduleClassName}.java
+        outFilePath: ${project}-svr/src/main/java/${modulePath}/${moduleClassName}.java
       - moduleName: clone # 模块名(根据moduleName自动计算modulePackageName为packageName+'.'+moduleName，然后计算出modulePath)
         inFilePath: btl/clone.btl
         outFilePath: ${project}-svr/src/main/java/${modulePath}/${moduleClassName}.java
