--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.codgen</groupId>
     <artifactId>codgen</artifactId>
-    <version>1.1.3</version>
+    <version>1.1.4</version>
     <packaging>pom</packaging>
     <description>code generator parent pom，代码生成器父pom</description>
 
@@ -62,6 +62,24 @@
     </scm>
 
     <profiles>
+        <profile>
+            <id>deploy-private</id>
+            <!-- 部署私服 -->
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>my-snapshots</id>
+                    <name>my-snapshots</name>
+                    <url>${my-snapshots.url}</url>
+                    <uniqueVersion>true</uniqueVersion>
+                </snapshotRepository>
+                <repository>
+                    <id>my-releases</id>
+                    <name>my-releases</name>
+                    <url>${my-releases.url}</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+
         <profile>
             <!-- 部署到中央仓库 -->
             <id>deploy-public</id>
