--- a/codgen-cmd/src/test/resources/in/codgen.yml
+++ b/codgen-cmd/src/test/resources/in/codgen.yml
@@ -65,6 +65,8 @@ template:
       - moduleName: dic # 模块名(根据moduleName自动计算modulePackageName为packageName+'.'+moduleName，然后计算出modulePath)
         inFilePath: btl/dic.btl
         outFilePath: ${project}-api/src/main/java/${modulePath}/${moduleClassName}.java
+      - inFilePath: btl/js-dic.btl
+        outFilePath: ${project}-web/src/dic/${project}/${dicMeta.className}.ts
     # PojoTemplate规则的配置选项
     #     值是Map列表，程序会将其中的每一项绑定到模板中
     pojo:
@@ -113,8 +115,19 @@ template:
       - moduleName: to # 模块名(根据moduleName自动计算modulePackageName为packageName+'.'+moduleName，然后计算出modulePath)
         inFilePath: btl/to-page.btl
         outFilePath: ${project}-api/src/main/java/${modulePath}/${pojoMeta.className}PageTo.java
-      - moduleName: vo # 模块名(根据moduleName自动计算modulePackageName为packageName+'.'+module，然后计算出modulePath)
-        inFilePath: btl/jsvo.btl
+      - inFilePath: btl/js-vo.btl
         outFilePath: ${project}-web/src/vo/${project}/${pojoMeta.className}Vo.ts
-      - inFilePath: btl/jsmng.btl
+      - inFilePath: btl/js-mng.btl
         outFilePath: ${project}-web/src/view/${project}/${pojoMeta.lowerHyphenNameWithoutPrefix}/${pojoMeta.className}Mng.vue
+      - inFilePath: btl/js-type-d.btl
+        outFilePath: ${project}-web/src/view/${project}/${pojoMeta.lowerHyphenNameWithoutPrefix}/type.d.ts
+      - inFilePath: btl/js-edit-form.btl
+        outFilePath: ${project}-web/src/view/${project}/${pojoMeta.lowerHyphenNameWithoutPrefix}/${pojoMeta.className}EditForm.vue
+      - inFilePath: btl/js-form-cfg.btl
+        outFilePath: ${project}-web/src/view/${project}/${pojoMeta.lowerHyphenNameWithoutPrefix}/cfg/form.cfg.ts
+      - inFilePath: btl/js-table-cfg.btl
+        outFilePath: ${project}-web/src/view/${project}/${pojoMeta.lowerHyphenNameWithoutPrefix}/cfg/table.cfg.ts
+      - inFilePath: btl/js-dic-cfg.btl
+        outFilePath: ${project}-web/src/view/${project}/${pojoMeta.lowerHyphenNameWithoutPrefix}/cfg/dic.cfg.ts
+      - inFilePath: btl/js-api.btl
+        outFilePath: ${project}-web/src/api/${project}/${pojoMeta.className}Api.ts
